Fix verify button on mobile to have white checkmark (#637)
* Fix verify button on mobile to have white checkmark

* Update checkmark

* Remove unused code

--- a/apps/audius-client/packages/web/src/containers/settings-page/components/mobile/VerificationPage.module.css
+++ b/apps/audius-client/packages/web/src/containers/settings-page/components/mobile/VerificationPage.module.css
@@ -31,10 +31,6 @@
   padding: 0px 12px;
 }
 
-.btnIcon path {
-  fill: var(--primary) !important;
-}
-
 .error {
   color: var(--accent-red);
   font-weight: var(--font-medium);
@@ -113,7 +109,6 @@
   text-transform: capitalize;
   color: var(--neutral);
 }
-
 
 .disabledBtn {
   background-color: var(--white);
